# Practice

./: .gitignore  CMakeLists.txt  build.sh  env.sh
Script/: run_segnet_mono.sh
data/: map.ot
example/: CMakeLists.txt  RGBSplit.cpp  SparseOpticalFlow.cpp  connectedComponents_test.cpp  contours.cpp  detectFeatures.cpp  edgeDetection.cpp  g2o_ba.cpp  goodFeaturesToTrackTest.cpp  joinMap.cpp  kmeans.cpp  main.cpp  orb-feature.cpp  pca.cpp  pixel-lookup.cpp  slamEnd.cpp  visualOdometry.cpp
include/: Segnet.h  common.h  slamBase.h  yb_algorithm.h
paperSource/: CMakeLists.txt  Segnet.cpp  Segnet_mono.cpp  ds_slam.cpp  monitor-test.cpp  orb-kmeans.cpp  orb-seg.cpp
param/: parameters.txt
src/: CMakeLists.txt  slamBase.cpp  yb_algorithm.cpp
